# simpledllinjector

./: .gitignore  CMakeLists.txt  README.md
backend/app/: CMakeLists.txt  console.cpp
backend/src/: CMakeLists.txt  backend.cpp  backend.h
backend/src/processmanager/: CMakeLists.txt  processinfo.h  processmanager.cpp  processmanager.h  processmanagerx64.h  processmanagerx86.h
cmake/: ManifestEmbedding.cmake  toolchain_x86.cmake
frontend/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  processselect.cpp  processselect.h  processselect.ui  qprocessinfolistmodel.h
resources/: app.manifest
